discussion/kv_engine/171643/171643_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-50988: Introduce SemaphoreBoundedTask

Some tasks need to be able to limit how many instances run
concurrently, like CompactTask.

Add SemaphoreBoundedTask to allow task concurrency to be limited by a
cb::AwaitableSemaphore.

If multiple tasks share a semaphore, the number of these tasks running
at a given time is limited by the capacity of the semaphore.

If no semaphore tokens are available, the task will snooze().

cb::AwaitableSemaphore maintains a queue of waiters, and will notify
"blocked" tasks when tokens become available. The task will then try to
acquire a token and run immediately.

This is not currently transparent to the task - it is required that the
task call:

  bool runInner() override {
     auto guard = acquireOrWait();
     if (!guard) {
         // could not acquire a token, queued for notification.
         // already snooze()-ed forever, just return true to
         // reschedule.
         return true;
     }
     // Do concurrency-limited work
  }

However, a future refactor could avoid this by, for example,
restructuring as a mixin

 SemaphoreBounded<SomeTask> task(semaphore, ...);

allowing any `SomeTask::run()` to be wrapped.

This would allow any task to be bounded by a semaphore if necessary,
without modification.

Change-Id: Ibf069081dcff31ebd99237273d6ac1962f12ef42

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2022-03-02 11:11:40.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-03-02 11:26:22.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15876/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/semaphore_bounded_task.h:15:10: error: "platform/awaitable_semaphore.h" file not found [clang-diagnostic-error]
#include <platform/awaitable_semaphore.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/task_concurrency_test.cc:42:13: warning: prefer using "override" or (rarely) "final" instead of "virtual" [modernize-use-override]
    virtual ~ConcurrencyTestTask() = default;
    ~~~~~~~~^
                                   override 

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15876/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/semaphore_bounded_task.h:15:10:
error: "platform/awaitable_semaphore.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15876/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44286/ : FAILURE

Compile error at c:\jenkins\workspace\kv_engine-windows-master\kv_engine\engines\ep\src\semaphore_bounded_task.h(15): fatal error C1083: Cannot open include file: "platform/awaitable_semaphore.h": No such file or directory ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44286/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37293/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/semaphore_bounded_task.h:15:10:
fatal error: "platform/awaitable_semaphore.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37293/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26041/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5588/ : FAILURE

Compile error at [2022-03-02T11:16:20.627Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/semaphore_bounded_task.h:15:10:
fatal error: platform/awaitable_semaphore.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5588/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5529/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5529/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17965/ : FAILURE

Compile error at [2022-03-02T11:23:49.011Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/semaphore_bounded_task.h:15:10:
fatal error: platform/awaitable_semaphore.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17965/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17639/ : FAILURE

Compile error at [2022-03-02T11:22:50.580Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/semaphore_bounded_task.h:15:10:
fatal error: platform/awaitable_semaphore.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17639/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16704/ : FAILURE

Compile error at [2022-03-02T11:14:26.930Z] ../kv_engine/engines/ep/src/semaphore_bounded_task.h:15:10:
fatal error: "platform/awaitable_semaphore.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16704/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18672/ : FAILURE

Compile error at [2022-03-02T11:20:43.309Z] ../kv_engine/engines/ep/src/semaphore_bounded_task.h:15:10:
fatal error: "platform/awaitable_semaphore.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18672/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14722/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: James H
Date: 2022-03-02 11:30:39.000000000
Message: 
Abandoned

flipping to neo branch
----------------------------------------------------------------------------------------------------------------------
